Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-59315

mctimings option -a (iterate over all buckets) is broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 7.6.0
    • 7.6.0
    • memcached
    • None
    • Untriaged
    • 0
    • Yes

    Description

      -a is used by cbcollect_info.

      Currently the program validates the option usage but does not alter its state, hence it will by default ask for only bucket "/all/" (aggregates).

      This was introduced while changing the argument parser due to a copy-paste error.

      https://review.couchbase.org/c/kv_engine/+/188538

      Before:

              case 'a':
                  if (!buckets.empty() && buckets.front() != "/all/") {
                      usage();
                      return EXIT_FAILURE;
                  }
                  buckets.clear();
                  break;

      After:

          getopt.addOption(
                  {[&buckets, &getopt](auto value) {
                       if (!buckets.empty() && buckets.front() != "/all/") {
                           usage(getopt, EXIT_FAILURE);
                       }
                   },
                   'a',
                   "all-buckets",
                   "Get list of buckets from the node and display stats per bucket "
                   "basis rather than aggregated e.g. --bucket /all/. Also -a and -b "
                   "may not be used at the same time."});

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            pulkit.matta Pulkit Matta
            pavlos.georgiou Pavlos Georgiou
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty