MB-59315: Fix mctimings option -a (iterate over all buckets)

A line was missed when moving to a different argument parser.

Change-Id: I9d4063359aafdcbfcde75df3fe1d7df57f819fe7
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/199583
Tested-by: Pavlos Georgiou <pavlos.georgiou@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>